@@ -1,5 +1,6 @@
 Version 1.0.2
 
+  * addStaticMethod () renamed to addStaticFunction () for consistency.
   * addMethod () renamed to addFunction() for consistency.
   * addCFunction () registrations.
   * Convert null pointers to and from nil.
